@@ -1,4 +1,7 @@
 Change log
+2020-04-18
+1. Updated ThyrosimJr normal ranges.
+
 2019-12-13
 1. The UI (simtime, dials, inputs) now match the experiment run
 
